pvoutput files in gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ RemoteSystemsTempFiles/.project
 .recommenders/
 testdir/
 .com_puppetlabs_geppetto_pptp_target
+net.powermatcher.remote.websockets/res/
